# aura_watermark

./: .gitignore  DATASET_PLAN.md  GREATLAKES_SETUP.md  README.md  infer.py  pyproject.toml  train.py
aura_watermark/: __init__.py  attacks.py  config.py  conformer.py  dataset.py  detector.py  discriminator.py  embedder.py  losses.py  stft.py  trainer.py
scripts/: setup_greatlakes.sh
scripts/dataset/: build_combined_manifest.py  curate_emilia.py  curate_fma.py  download_emilia.py  download_fma.py  scan_emilia.py  scan_fma.py  slurm_download_emilia.sh  slurm_download_fma.sh  slurm_emilia_scan.sh  slurm_fma_download.sh  slurm_fma_scan.sh  slurm_sanity_check.sh
scripts/train/: slurm_train.sh
tests/: test_attacks.py  test_conformer.py  test_dataset.py  test_detector.py  test_embedder.py  test_infer.py  test_losses.py  test_stft.py  test_train.py  test_trainer.py
